{
    "name": "Puzzle",
    "maps": [
        {
            "name": "BookShelf",
            "id": "1c98893f-c332-438b-8b92-569d5449584e",
            "actions": [
                {
                    "name": "PlaceBook",
                    "type": "Button",
                    "id": "0010440d-9a4b-4fe7-b5fd-a4a3c8802b7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveBook",
                    "type": "Button",
                    "id": "e137a4cc-3415-4566-87fe-74adc4dd38db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf8814dd-3234-489c-9d31-20ab9aff5ca8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e5db01f-8943-484f-826f-51738d331b7b",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveBook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Clock",
            "id": "238e411e-eb11-4f41-8bee-6bcc04a81136",
            "actions": [
                {
                    "name": "Clock",
                    "type": "Button",
                    "id": "79c8d12a-17a8-4aad-a705-45b3b483d5b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitClock",
                    "type": "Button",
                    "id": "03551c13-76b8-47fd-8a61-4f5c60b7f2c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClockForward",
                    "type": "Button",
                    "id": "e56aa70b-5596-4919-aa9e-4174d5c20b55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClockBackward",
                    "type": "Button",
                    "id": "aa388570-3a84-467d-ab14-0aa6ae2e0d67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HourHandForward",
                    "type": "Button",
                    "id": "1012cfe4-3d1c-415a-8f38-9671b7b760e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HourHandBackward",
                    "type": "Button",
                    "id": "65ad7c45-9aba-4753-a01e-61ad7a12d02a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "187dcff1-5c62-4bcf-998c-a96e0d450de1",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36bbab85-20dc-46fc-858a-11b38c883da5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitClock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7e0729f-c11d-4d0f-825c-bb37a3873e7e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ClockForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fc57b7c-ea2e-4270-b33f-e4c7f312c2ec",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ClockBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8982a77c-7bd5-425b-9c30-13670bd150cb",
                    "path": "<Keyboard>/d",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HourHandForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0d3c8ab-6995-45b1-98ef-0ff6f1ae969f",
                    "path": "<Keyboard>/a",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HourHandBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PadLock",
            "id": "508aa0e4-ce41-4f6a-896b-ff5e9821149a",
            "actions": [
                {
                    "name": "WheelRotate",
                    "type": "Button",
                    "id": "7b0fbf7e-32f2-40d0-a265-1a9bdf285c41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Padlock",
                    "type": "Button",
                    "id": "de4b099d-3280-4a5f-bd7a-031db871e0cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PadlockExit",
                    "type": "Button",
                    "id": "001bc5be-7a7c-4314-bf91-c6f6fa2b2eee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b42db438-3e41-4599-a1e5-25dfb633ef34",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WheelRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1263a7f2-7f28-4439-9c22-1308fd39e347",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Padlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50eef824-3b9d-47b8-a2af-0ccc8d0c8479",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PadlockExit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}